# MacrocosmDB

./: .gitignore  .travis.yaml  .travis.yml  Cargo.toml  README.md
.github/workflows/: ci.yml
dashboard/: Cargo.toml
dashboard/src/: main.rs
dashboard/static/: index.html  query.js
doc/: storage.md
doc/develop/:  coding_standards_zh_CN.md  ts_bwtree_achieve_zh.md  ts_storage_engine.md  ts_stroage_engine_zhCN.md  ts_stroage_engine_zh_CN.md
doc/develop/embedded/: 0.Preparing the development environment.md  0.开发环境准备.md  1.第一个嵌入式工程.md
doc/res/: data_model.drawio  mem_table.drawio  stroage_timeseries_model.drawio
src/config/: Cargo.toml
src/embedded/: Cargo.toml
src/embedded/src/: lib.rs
src/query_engine/: Cargo.toml
src/query_engine/src/: keywords.rs  lexer.rs  lib.rs
src/query_engine/src/dialect/: mod.rs
src/storage/: Cargo.toml
src/storage/src/: btree.rs  field.rs  lib.rs  memtable.rs  model.rs  record.rs  storage.rs  timestamp.rs
src/storage/src/meta_db/: btree.rs  bwtree.rs  mod.rs  page.rs
src/storage/src/wal/: mod.rs
src/util/src/: auxiliary.rs
